[package]
name = "rucola"
version = "0.3.0"
authors = ["Linus Mußmächer"]
edition = "2021"
description = "Terminal-based markdown note manager."
readme = "README.md"
homepage = "https://github.com/Linus-Mussmaecher/rucola"
repository = "https://github.com/Linus-Mussmaecher/rucola"
keywords = ["markdown", "note", "notes", "note-taking", "zettelkasten", "tui", "terminal", ]
categories = ["command-line-interface"]
license = "GPL-3.0-only"

[dependencies]
# General TUI
crossterm = "0.27.0"
ratatui = {version = "^0.27", features = ["serde"]}
tui-textarea = "^0.4"
# Command line parsing
clap = {version = "^4.5", features = ["derive"]}
expanduser = "^1.2"
# Opening
open = "^5"
notify = "^6.1"
# Parsing
comrak = {git = "https://github.com/kivikakk/comrak.git", rev = "b67d406d3b101b93539c37a1ca75bff81ff8c149"}
ignore = "^0.4"
regex = "^1.10"
fuzzy-matcher = "^0.3"
itertools = "^0.12"
# Error handling
thiserror = "^1.0"
# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
confy = "^0.6"

[dev-dependencies]
testdir = "^0.9"

[[bin]]
name = "rucola"
test = true


[profile.release]
strip = true
lto = true
codegen-units = 4
