[package]
name = "rucola-notes"
version = "0.3.6"
authors = ["linus.mussmaecher@gmail.com"]
edition = "2021"
description = "Terminal-based markdown note manager."
readme = "README.md"
homepage = "https://github.com/Linus-Mussmaecher/rucola"
repository = "https://github.com/Linus-Mussmaecher/rucola"
keywords = ["markdown", "notes", "zettelkasten", "tui", "terminal", ]
categories = ["command-line-interface"]
license = "GPL-3.0-only"

[package.metadata.wix]
upgrade-guid = "0581E782-1C3D-4B56-96EA-AC0AD9AB83A5"
path-guid = "0ADC3A65-B533-474B-8505-66DF7C35C521"
license = false
eula = false

[dependencies]
# General TUI
crossterm = "0.27.0"
ratatui = {version = "^0.27", features = ["serde"]}
tui-textarea = "^0.4"
# Command line parsing
clap = {version = "^4.5", features = ["derive"]}
# Opening
open = "^5"
notify = "^6.1"
# Parsing
comrak = "^0.26"
# comrak = {git = "https://github.com/kivikakk/comrak.git", rev = "b67d406d3b101b93539c37a1ca75bff81ff8c149"}
ignore = "^0.4"
regex = "^1.10"
fuzzy-matcher = "^0.3"
itertools = "^0.12"
# Error handling
thiserror = "^1.0"
# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
directories = "^5.0"
confy = "^0.6"

[target.'cfg(unix)'.dependencies]
expanduser = "^1.2"

[dev-dependencies]
testdir = "^0.9"

[build-dependencies]
confy = "^0.6"

[[bin]]
name = "rucola"
path = "src/main.rs"
test = true

[profile.release]
strip = true
lto = true
codegen-units = 4

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# A GitHub repo to push Homebrew formulas to
tap = "Linus-Mussmaecher/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Customize the Homebrew formula name
formula = "rucola"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
