[package]
name = "rucola-notes"
version = "0.5.0"
authors = ["linus.mussmaecher@gmail.com"]
edition = "2021"
description = "Terminal-based markdown note manager."
readme = "README.md"
homepage = "https://github.com/Linus-Mussmaecher/rucola"
repository = "https://github.com/Linus-Mussmaecher/rucola"
keywords = ["markdown", "notes", "zettelkasten", "tui", "terminal", ]
categories = ["command-line-interface"]
license = "GPL-3.0-only"

[package.metadata.wix]
upgrade-guid = "0581E782-1C3D-4B56-96EA-AC0AD9AB83A5"
path-guid = "0ADC3A65-B533-474B-8505-66DF7C35C521"
license = false
eula = false

[dependencies]
# General TUI
ratatui = {version = "^0.29", features = ["serde"]}
tui-textarea = "^0.7"
# Command line parsing
clap = {version = "^4.5", features = ["derive"]}
# Opening
open = "^5"
notify = "^8.0"
# Parsing
comrak = "^0.39"
# comrak = {git = "https://github.com/kivikakk/comrak.git", rev = "b67d406d3b101b93539c37a1ca75bff81ff8c149"}
ignore = "^0.4"
regex = "^1.11"
yaml-rust = "0.4"
fuzzy-matcher = "^0.3"
itertools = "^0.14"
# Error handling
thiserror = "^2.0"
# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
directories = "^6.0"
confy = "^1.0"

[target.'cfg(unix)'.dependencies]
expanduser = "^1.2"

[dev-dependencies]
testdir = "^0.9"

[build-dependencies]
confy = "^1.0"

[[bin]]
name = "rucola"
path = "src/main.rs"
test = true

[profile.release]
strip = true
lto = true
codegen-units = 4

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
